--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "msp/cashondelivery",
     "description": "",
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0",
+        "php": "^7.0|^7.1",
         "msp/common": "*",
 
         "magento/magento-composer-installer": "*"
